cabal-version:       2.4
name:                tank-m8s
version:             0.1.0.0
synopsis:            Servant based backend for Tank Mates
license:             NONE
license-file:        LICENSE
author:              Cameron Dart
maintainer:          cdart2@illinois.edu
category:            Web
extra-source-files:  CHANGELOG.md

executable tank-buddies
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0
                     , aeson
					 , http-client
                     , servant
                     , servant-client-core
                     , servant-client
                     , servant-server
					 , sqlite-simple
					 , transformers
                     , wai
                     , warp
  hs-source-dirs:      app
  default-language:    Haskell2010

